Skiftet fra konsol til ASP.NET Core, tilføjet student og course controller

--- a/BlackBoard/BlackBoard.csproj
+++ b/BlackBoard/BlackBoard.csproj
@@ -5,10 +5,20 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20190409171010_Initial.cs" />
+    <Compile Remove="Migrations\20190409171010_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20190409172953_Initial.cs" />
+    <Compile Remove="Migrations\20190409172953_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20190409173503_Base.cs" />
+    <Compile Remove="Migrations\20190409173503_Base.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
